@@ -7,6 +7,8 @@ lintian-brush (0.75) UNRELEASED; urgency=medium
   * Add fixer public-upsteam-key-binary.
   * Add fixer for upstream-metadata-not-yaml-mapping.
   * Probe for gitlab URLs.
+  * Only remove overrides if asyncpg is available to contact UDD.
+    fixers/unused-override.py
 
  -- Jelmer Vernooĳ <jelmer@debian.org>  Sun, 26 Jul 2020 20:06:29 +0000
 
